style: change defalut style

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,1 @@
-@import './common.scss';
-@import './app.scss';
-@import './container/home';
-@import './container/about';
-@import './container/topic';
+@import './reset.css';
